bk_ida/gccida/c0/count_one_set
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_one_set/src/loop.c:4029:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_one_set/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_one_set/src/loop.c:4030:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_one_set/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/count_one_set/src/obj/loop.o] Error 1
